syntax = "proto3";

package protos.messages;

option go_package = "github.com/thanhlt-1007/grpc-laptop/go/protos/messages";

message CPU  {
  string brand = 1;
  string name = 2;
  uint32 number_cores = 3;
  uint32 number_threads = 4;
  double min_ghz = 5;
  double max_ghz = 6;
}
